--- a/App.Api/appsettings.json
+++ b/App.Api/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "Issuer": "https://lxduc.com/",
+    "Audience": "https://lxduc.com/",
+    "SecretKey": "/A?D(G+KbPeShVkYp3s6v9y$B&E)H@McQfTjWnZq4t7w!z%C*F-JaNdRgUkXp2s5",
+    "ExpireIn": "3600"
+  },
+
+  "ConnectionStrings": {
+    "Database": "Server=.;Database=UserManagement_LXD;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
