--- a/App.WebApp/appsettings.json
+++ b/App.WebApp/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BaseAddressUri": "https://localhost:7085",
+
+  "JwtSettings": {
+    "Issuer": "https://lxduc.com/",
+    "Audience": "https://lxduc.com/",
+    "SecretKey": "/A?D(G+KbPeShVkYp3s6v9y$B&E)H@McQfTjWnZq4t7w!z%C*F-JaNdRgUkXp2s5",
+    "ExpireIn": "3600"
+  }
 }
